--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<script type='text/javascript' src='assets/javascript/prettify.js'></script>
+    		<script type='text/javascript' src='assets/js/jquery-2.1.0.min.js'></script>
+	    	<script type='text/javascript' src='assets/js/bootstrap.js'></script>
+
+		<link rel='stylesheet' type='text/css' href='assets/css/style.css' />
+		<link rel='stylesheet' type='text/css' href='assets/css/bootstrap.css' />
+		<link rel='stylesheet' type='text/css' href='assets/css/prettify.css' />
 	</head>
 	<body>
 		<nav>
