--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: We're The Worst
+title: Does This Work
 ---
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
